--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/imgs/isotipo_gentio.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gentío</title>
+    
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4D4JY8GV4B"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4D4JY8GV4B');
+    
+</script>
   </head>
   <body>
     <div id="root" style="height: 100%; position: relative"></div>
