--- a/index.html
+++ b/index.html
@@ -4,18 +4,40 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/imgs/isotipo_gentio.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gentío</title>
-    
-    <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4D4JY8GV4B"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
 
-    gtag('config', 'G-4D4JY8GV4B');
-    
-</script>
+    <!-- Título optimizado para SEO -->
+    <title>Gentío | Agencia de Marketing, Comunicación y Desarrollo web</title>
+
+    <!-- Metaetiquetas SEO -->
+    <meta name="description" content="Gentío Marketing - Agencia de marketing y comunicación en Córdoba. Expertos en desarrollo web, posicionamiento SEO y campañas publicitarias para impulsar tu negocio." />
+    <meta name="keywords" content="Gentío Marketing, desarrollo web en Córdoba, agencia de marketing en Córdoba, comunicación, SEO en Córdoba, campañas publicitarias" />
+    <meta name="author" content="Gentío Marketing" />
+
+    <!-- Open Graph para redes sociales -->
+    <meta property="og:title" content="Gentío Marketing | Desarrollo web y Marketing en Córdoba" />
+    <meta property="og:description" content="Gentío Marketing - Agencia de marketing y comunicación en Córdoba. Tu marca en boca de todos." />
+    <meta property="og:image" content="https://www.gentiomkt.com/imgs/og_image.jpg" />
+    <meta property="og:url" content="https://www.gentiomkt.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Gentío Marketing | Desarrollo web y Marketing en Córdoba" />
+    <meta name="twitter:description" content="Agencia de marketing y comunicación en Córdoba. Desarrollo web, SEO y campañas publicitarias." />
+    <meta name="twitter:image" content="https://www.gentiomkt.com/imgs/og_image.jpg" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4D4JY8GV4B"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-4D4JY8GV4B');
+    </script>
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root" style="height: 100%; position: relative"></div>
