--- a/index.html
+++ b/index.html
@@ -36,9 +36,19 @@
       gtag('config', 'G-4D4JY8GV4B');
     </script>
 
+
     <!-- Robots -->
     <meta name="robots" content="index, follow" />
   </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2BEBP2CM1Q"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-2BEBP2CM1Q');
+    </script>
   <body>
     <div id="root" style="height: 100%; position: relative"></div>
     <script type="module" src="/src/main.jsx"></script>
